--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -31,5 +31,7 @@ jobs:
       with:
         ruby-version: ${{ matrix.ruby-version }}
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+    - name: Install rspec
+      run: gem install rspec
     - name: Run tests
       run: rake
